Fix overflow of URLs in status page

--- a/internal/web/static/varys.css
+++ b/internal/web/static/varys.css
@@ -335,6 +335,7 @@ a {
 .feed-status-table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 .feed-status-table td:first-child {
@@ -347,4 +348,5 @@ a {
     font-size: 0.85rem;
     border: none;
     vertical-align: top;
+    overflow-x: auto;
 }
